@@ -8,6 +8,7 @@ Release 0.8.7
 * minor bug fixes
 * addition of a sparsity_limit parameter in the meta merging GUI, to remove noise more precisely
 * new parameter file is properly copied
+* optimization while removing mixtures and important bug fixes
 
 =============
 Release 0.8.6
